[gd_scene load_steps=12 format=3 uid="uid://dfocn8dg2df5y"]

[ext_resource type="Script" path="res://Assets/Enemies/Enemy_ranged.gd" id="1_76qk3"]
[ext_resource type="PackedScene" uid="uid://dj5esbs4onldu" path="res://Assets/Farm/Plot/Plant/Seeds/Seed_drop.tscn" id="2_qwwnt"]
[ext_resource type="Texture2D" uid="uid://d2dfj722hs8x0" path="res://Assets/Enemies/spider_ranged.png" id="3_syr7h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6yww"]
atlas = ExtResource("3_syr7h")
region = Rect2(0, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6kq5"]
atlas = ExtResource("3_syr7h")
region = Rect2(63, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8hk2"]
atlas = ExtResource("3_syr7h")
region = Rect2(126, 0, 63, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7rac4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6yww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6kq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8hk2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tp0y3"]
radius = 40.0
height = 112.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eury0"]
radius = 660.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r4epb"]
radius = 42.0
height = 114.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pnijh"]
radius = 273.562

[node name="Enemy_ranged" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 31
script = ExtResource("1_76qk3")
seed_item = ExtResource("2_qwwnt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -25)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7rac4")
autoplay = "default"
frame_progress = 0.957489

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-5, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tp0y3")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_eury0")

[node name="PlayerCollision" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-5, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_r4epb")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-70, 0)
collision_mask = 8

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(58, 0)
collision_mask = 8

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-64, 0)
target_position = Vector2(0, 61)
collision_mask = 8

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(34, 0)
target_position = Vector2(0, 60)
collision_mask = 8

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(70, 0)

[node name="ParticleCooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="FleeZone" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeZone"]
shape = SubResource("CircleShape2D_pnijh")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="ParticleCooldown" to="." method="_on_particle_cooldown_timeout"]
[connection signal="body_entered" from="FleeZone" to="." method="_on_flee_zone_body_entered"]
[connection signal="body_exited" from="FleeZone" to="." method="_on_flee_zone_body_exited"]
